portfolio-creator/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: portfolio-creator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/haverford-cc/portfolio-creator-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
