portfolio-creator/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: portfolio-creator
spec:
  selector:
    app: backend
  ports:
  - port: 80
