portfolio-creator/backend/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend
  namespace: portfolio-creator
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portfolio-creator.dens.dev`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: backend
          port: 80
      middlewares:
        - name: backend-api-strip-prefix
  tls:
    secretName: dens.dev-tls
